--- a/eventos/templates/eventos/index.html
+++ b/eventos/templates/eventos/index.html
@@ -3,7 +3,7 @@
 {% block title %} Index | Eventos UFPI {% endblock %}
 
 {% block content %}
-    <section class="hero is-light is-medium" style="min-height: 80vh">
+    <section class="section has-background-grey-lighter" style="min-height: 80vh">
         <div class="content container" id="main-container">
             <h1 class="title has-text-centered">Todos os Eventos</h1>
             <div class="columns is-multiline">
